add ansible roles vpc-ecs-in-ecr-environment-remote-state & vpc-ecs-in-ecr-environment to ansible main playbook

--- a/ansible/play-build.yml
+++ b/ansible/play-build.yml
@@ -2,3 +2,5 @@
 - hosts: localhost
   roles:
     - { role: management-prerequisite-cli,  tags: prepare_management_server, become: yes }
+    - { role: vpc-ecs-in-ecr-environment-remote-state, tags: first_time_run }
+    - { role: vpc-ecs-in-ecr-environment }
