--- a/ansible/roles/vpc-ecs-n-ecr-environment/defaults/main.yml
+++ b/ansible/roles/vpc-ecs-n-ecr-environment/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-# defaults file for vpc-n-eks
+# defaults file for vpc-ecs-n-ecr-environment
 ansible_python_interpreter: /usr/bin/python3
 terraform_dir: "{{ playbook_dir }}/../terraform/vpc-ecs-n-ecr-environment"
 project_name: proxymity
